<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/chessboard_background">

  <LinearLayout
    android:id="@+id/llPlayer"
    android:layout_width="100dp"
    android:layout_height="48dp"
    android:layout_marginStart="48dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    app:layout_constraintBottom_toTopOf="@+id/llCom"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <ImageView
      android:layout_width="24dp"
      android:layout_height="24dp"
      android:src="@drawable/ic_chessmain_black"/>

    <TextView
      android:id="@+id/tvPlayer"
      style="@style/GomokuTagStyle"
      android:text="@string/player"/>
  </LinearLayout>

  <LinearLayout
    android:id="@+id/llCom"
    android:layout_width="100dp"
    android:layout_height="48dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    app:layout_constraintBottom_toTopOf="@id/cvContent"
    app:layout_constraintLeft_toLeftOf="@id/llPlayer"
    app:layout_constraintRight_toRightOf="@id/llPlayer"
    app:layout_constraintTop_toBottomOf="@+id/llPlayer">

    <ImageView
      android:layout_width="24dp"
      android:layout_height="24dp"
      android:src="@drawable/ic_chessman_white"/>

    <TextView
      android:id="@+id/tvCom"
      style="@style/GomokuTagStyle"
      android:text="@string/computer"/>
  </LinearLayout>

  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="0dp"
    android:layout_marginEnd="48dp"
    android:orientation="vertical"
    app:layout_constraintBottom_toBottomOf="@id/llCom"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="@id/llPlayer">

    <Button
      android:id="@+id/btnDifficalty"
      style="@style/GomokuButtonStyle"
      android:elevation="2dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toLeftOf="@+id/btnUndo"
      app:layout_constraintTop_toBottomOf="@+id/cvContent"
      tools:text="@string/difficalty_easy"/>

    <Button
      android:id="@+id/btnRestart"
      style="@style/GomokuButtonStyle"
      android:text="@string/restart"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toLeftOf="@+id/btnUndo"
      app:layout_constraintTop_toBottomOf="@+id/cvContent"/>

    <Button
      android:id="@+id/btnUndo"
      style="@style/GomokuButtonStyle"
      android:text="@string/undo"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toRightOf="@+id/btnRestart"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/cvContent"/>
  </LinearLayout>

  <android.support.v7.widget.CardView
    android:id="@+id/cvContent"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginStart="18dp"
    android:layout_marginEnd="18dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintDimensionRatio="1:1"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.55">

    <com.chrnie.gomoku.app.widget.GomokuView
      android:id="@+id/gomokuView"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@drawable/bg_chessboard"/>
  </android.support.v7.widget.CardView>

  <TextView
    android:id="@+id/tvGameMessage"
    android:textStyle="bold"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:elevation="10dp"
    android:shadowColor="#000000"
    android:shadowDx="2"
    android:shadowDy="2"
    android:shadowRadius="2"
    android:textColor="#ffffff"
    android:textSize="24dp"
    android:visibility="gone"
    app:layout_constraintBottom_toBottomOf="@+id/cvContent"
    app:layout_constraintLeft_toLeftOf="@+id/cvContent"
    app:layout_constraintRight_toRightOf="@+id/cvContent"
    app:layout_constraintTop_toTopOf="@+id/cvContent"
    tools:text="玩家 取得游戏胜利"
    tools:visibility="visible"/>

  <FrameLayout
    android:id="@+id/flBanner"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"/>
</android.support.constraint.ConstraintLayout>